# src/main/java/ru/demo/app/restapp/web/UserController.java
@@ -2,13 +2,10 @@ package ru.demo.app.restapp.web;
 
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiResponses;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.tags.Tag;
 import java.net.URI;
 import java.security.Principal;
 import java.util.List;
@@ -19,18 +16,14 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseStatus;
-import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 import ru.demo.app.restapp.service.UserService;
-import ru.demo.app.restapp.web.controller.UsersApi;
+import ru.demo.app.restapp.web.controller.UsersApiDelegate;
 import ru.demo.app.restapp.web.dto.ChangeEmailRequest;
 import ru.demo.app.restapp.web.dto.ErrorResponse;
 import ru.demo.app.restapp.web.dto.UserFullResponse;
@@ -38,26 +31,13 @@ import ru.demo.app.restapp.web.dto.UserRequest;
 import ru.demo.app.restapp.web.dto.ValidationErrorResponse;
 
 @Slf4j
-@Tag(name = "User REST API operations")
-@RestController
-@RequestMapping("/users")
 @RequiredArgsConstructor
-public class UserController implements UsersApi {
+public class UserController implements UsersApiDelegate {
 
   private final UserService userService;
 
-  @ApiOperation(value = "Get all users", nickname = "getUsers", notes = "", response = UserFullResponse.class, responseContainer = "List", tags = {
-      "user",})
-  @ApiResponses(value = {
-      @io.swagger.annotations.ApiResponse(code = 200, message = "Информации о клиенте найдена", response = UserFullResponse.class, responseContainer = "List")})
-  @GetMapping
-  public ResponseEntity<List<UserFullResponse>> getUsers(
-      @RequestParam(required = false, name = "age") Optional<Integer> age,
-      @RequestParam(required = false, name = "phone") Optional<String> phone,
-      @RequestParam(required = false, name = "name") Optional<String> name,
-      @RequestParam(required = false, name = "email") Optional<String> email,
-      @RequestParam(required = false, name = "page") Optional<Integer> page,
-      @RequestParam(required = false, name = "size") Optional<Integer> size) {
+  public ResponseEntity<List<UserFullResponse>> getUsers(Optional<Integer> age, Optional<String> phone,
+      Optional<String> name, Optional<String> email, Optional<Integer> page, Optional<Integer> size) {
     log.info("FindAll users by age-{}, phone-{}, name-{}, email-{}, page-{}, size-{}", age, phone, name, email, page,
         size);
     List<UserFullResponse> foundUsers = userService.findAll(age, phone, name, email, page, size);
@@ -65,13 +45,9 @@ public class UserController implements UsersApi {
     return new ResponseEntity<>(foundUsers, HttpStatus.OK);
   }
 
-  @Operation(summary = "Get user by ID", responses = {
-      @ApiResponse(responseCode = "200", description = "User for requested ID", content = @Content(schema = @Schema(implementation = UserFullResponse.class))),
-      @ApiResponse(responseCode = "404", description = "Requested data not found", content = @Content(schema = @Schema(implementation = ErrorResponse.class)))})
-  @GetMapping(value = "/{id}", produces = APPLICATION_JSON_VALUE)
-  public UserFullResponse user(@PathVariable Long id) {
+  public ResponseEntity<UserFullResponse> getUserById(@PathVariable Long id) {
     log.info("Find user by id-{}", id);
-    return userService.getById(id);
+    return new ResponseEntity<>(userService.getById(id), HttpStatus.OK);
   }
 
   @Operation(summary = "Create new user", responses = {
